# playbook-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  sample.yml
examples/01-hello/: Dockerfile  say_hi.yml
examples/02-nvidia-smi/: bash.yml
examples/03-tensorflow-gpu/: bash.yml  nvidia-status.py
examples/03-tensorflow-gpu/base/: Dockerfile  bashrc.sh  start.sh
examples/03-tensorflow-gpu/docker/: Dockerfile  start.sh
examples/03-tensorflow-gpu/extend/: Dockerfile  requirements.txt  util.patch
examples/04-container-only/: Dockerfile  Readme.md  bash.yml  say_hi.py  say_hi.yml
examples/05-k8s-dev/: Dockerfile  say_hi.py  say_hi.yml
examples/hello/: Dockerfile  bash.yml  say_hi.py  say_hi.yml
examples/nvidia-smi/: nvidia.yml
examples/tensorflow-gpu/: nvidia.yml
examples/tensorflow-gpu/docker/: Dockerfile
src/: builtins.rs  container.rs  context.rs  lib.rs  main.rs  playbook-amlsub.py  spawner.rs
src/fixtures/: 1.yml  a.yml  b.yml  set_b.yml
src/lang/: python.rs
src/systems/: docker.rs  hotwings.rs  hotwings_k8s_api.py  mod.rs
src/systems/templates-hotwings/: batch.hbs  pv.hbs  pvc.hbs
tests/: ci.rs  containers.rs
tests/base/: Dockerfile
tests/fixtures/: batch-basic.yml  k8s_request_gpus.yml  k8s_request_gpus2.yml
tests/test1/: Dockerfile  external_vars.yml  say_hi.py  say_hi.yml  start.sh  test_sys_vars.yml
tests/test2/: fork_simple.yml
tests/test3/: request_gpus.yml  request_gpus2.yml
