[package]
name = "playbook"
version = "0.2.8"
authors = ["Alex Yang <aleozlx@gmail.com>"]
description = "YAML driven Docker DevOps"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/aleozlx/playbook-rs.git"

[lib]
name = "playbook_api"

[features]
base = []
default = ["spawner_python"]
spawner_python = ["pyo3", "ymlctx/topyobject"]

[dependencies]
yaml-rust = "^0.4"
colored = "1.6"
log = "0.4"
fern = "0.5"
chrono = "^0.4"
clap = "2"
ymlctx = "0.1.2"
pyo3 = { version = "0.5", optional = true }
regex = "1"
nix = "^0.11"
impersonate = "0.0.1"

[dev-dependencies]
tempfile = "3.0.5"
