[package]
name = "playbook"
version = "0.3.1"
authors = ["Alex Yang <aleozlx@gmail.com>"]
description = "YAML driven Docker DevOps"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/aleozlx/playbook-rs.git"

[lib]
name = "playbook_api"

[features]
base = []
default = ["lang_python"]
lang_python = ["pyo3", "ymlctx/topyobject"]
ci_only = [] # dummy feature because of https://github.com/rust-lang/rust/issues/45599
agent = []

[dependencies]
yaml-rust = "^0.4"
colored = "1.6"
log = "0.4"
fern = "0.5"
chrono = "^0.4"
clap = "^2.32.0"
ymlctx = "0.1.5"
pyo3 = { version = "0.5", optional = true }
regex = "1"
nix = "^0.11"
impersonate = "0.0.3"
dirs = "1.0.4"
serde_json = "1.0"
serde = "^1.0.82"
serde_derive = "^1.0.82"

[dev-dependencies]
tempfile = "3.0.5"

[badges]
travis-ci = { repository = "aleozlx/playbook-rs", branch = "master" }
