[package]
name = "playbook"
version = "0.4.2"
authors = ["Alex Yang <aleozlx@gmail.com>"]
description = "YAML driven Docker DevOps"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/aleozlx/playbook-rs.git"

[lib]
name = "playbook_api"

[features]
default = []

# Python language support
lang_python = ["pyo3", "ymlctx/topyobject"]

# Continuous Integration / Testing
ci_only = [] # dummy feature because of https://github.com/rust-lang/rust/issues/45599

# agent mode
#   enables the --arg-resume command argument
agent = []

# emit API calls suitable for other infrastructures
#   enables the --as command argument
#   using a templating system "handlebars"
as_switch = ["handlebars"]

# disable host tasks, etc. See https://github.com/aleozlx/playbook-rs/issues/19
sandbox = []

# Hotwings system: depends on k8s API Python client
sys_hotwings = ["lang_python", "as_switch"]

[dependencies]
yaml-rust = "0.4"
colored = "1.6"
log = "0.4"
fern = "0.5"
chrono = "0.4"
clap = "2.32.0"
ymlctx = "0.1.8"
pyo3 = { version = "0.5", optional = true }
regex = "1"
nix = "0.11"
impersonate = "0.0.3"
dirs = "1.0.4"
serde_json = "1.0"
serde = "1.0.90"
serde_derive = "1.0.90"
itertools = "0.8"
handlebars = { version = "1.1.0", optional = true }
uuid = { version = "0.7", features = ["v5"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.0.5"

[badges]
travis-ci = { repository = "aleozlx/playbook-rs", branch = "master" }
